[package]
name = "listree"
version = "0.1.1"
edition = "2021"
authors = ["Daiki Nakashima <daiki48.engineer@gmail.com>"]
license = "MIT"
description = "Tools to view directories and files"
readme = "README.md"
repository = "https://github.com/Daiki48/listree"
keywords = ["cli", "view", "directories", "files"]


[dependencies]
